--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "A minimal portfolio with Vanilla JavaScript",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "webpack --mode production"
   },
   "repository": {
     "type": "git",
@@ -22,6 +23,7 @@
   },
   "homepage": "https://github.com/gndx/js-portfolio#readme",
   "devDependencies": {
+    "@types/webpack": "^4.41.26",
     "webpack": "^5.25.0",
     "webpack-cli": "^4.5.0"
   }
