--- a/package.json
+++ b/package.json
@@ -23,7 +23,11 @@
   },
   "homepage": "https://github.com/gndx/js-portfolio#readme",
   "devDependencies": {
+    "@babel/core": "^7.13.10",
+    "@babel/plugin-transform-runtime": "^7.13.10",
+    "@babel/preset-env": "^7.13.10",
     "@types/webpack": "^4.41.26",
+    "babel-loader": "^8.2.2",
     "webpack": "^5.25.0",
     "webpack-cli": "^4.5.0"
   }
