--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack --mode production"
+    "build": "webpack --mode production",
+    "dev": "webpack --mode development"
   },
   "repository": {
     "type": "git",
@@ -28,6 +29,7 @@
     "@babel/preset-env": "^7.13.10",
     "@types/webpack": "^4.41.26",
     "babel-loader": "^8.2.2",
+    "html-webpack-plugin": "^5.3.1",
     "webpack": "^5.25.0",
     "webpack-cli": "^4.5.0"
   }
