--- a/package.json
+++ b/package.json
@@ -29,7 +29,11 @@
     "@babel/preset-env": "^7.13.10",
     "@types/webpack": "^4.41.26",
     "babel-loader": "^8.2.2",
+    "css-loader": "^5.1.2",
     "html-webpack-plugin": "^5.3.1",
+    "mini-css-extract-plugin": "^1.3.9",
+    "stylus": "^0.54.8",
+    "stylus-loader": "^5.0.0",
     "webpack": "^5.25.0",
     "webpack-cli": "^4.5.0"
   }
