--- a/package.json
+++ b/package.json
@@ -36,5 +36,8 @@
     "stylus-loader": "^5.0.0",
     "webpack": "^5.25.0",
     "webpack-cli": "^4.5.0"
+  },
+  "dependencies": {
+    "copy-webpack-plugin": "^8.0.0"
   }
 }
