--- a/package.json
+++ b/package.json
@@ -30,11 +30,13 @@
     "@types/webpack": "^4.41.26",
     "babel-loader": "^8.2.2",
     "css-loader": "^5.1.2",
+    "css-minimizer-webpack-plugin": "^1.2.0",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.3.1",
     "mini-css-extract-plugin": "^1.3.9",
     "stylus": "^0.54.8",
     "stylus-loader": "^5.0.0",
+    "terser-webpack-plugin": "^5.1.1",
     "url-loader": "^4.1.1",
     "webpack": "^5.25.0",
     "webpack-cli": "^4.5.0"
