--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@babel/preset-env": "^7.13.10",
     "@types/webpack": "^4.41.26",
     "babel-loader": "^8.2.2",
+    "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^5.1.2",
     "css-minimizer-webpack-plugin": "^1.2.0",
     "dotenv-webpack": "^7.0.1",
