--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "node ./scripts/create-env.js && webpack --mode production",
     "dev": "webpack --config webpack.config.dev.js",
-    "dev:watch": "webpack --config webpack.config.dev.js --watch"
+    "dev:watch": "webpack --config webpack.config.dev.js --watch",
+    "start": "webpack serve --config webpack.config.dev.js"
   },
   "repository": {
     "type": "git",
@@ -42,7 +43,8 @@
     "terser-webpack-plugin": "^5.1.1",
     "url-loader": "^4.1.1",
     "webpack": "^5.25.0",
-    "webpack-cli": "^4.5.0"
+    "webpack-cli": "^4.5.0",
+    "webpack-dev-server": "^3.11.2"
   },
   "dependencies": {
     "copy-webpack-plugin": "^8.0.0"
